# axum_app

./: .env  Cargo.toml
migrations/: 20260703162611_create_tasks_table.down.sql  20260703162611_create_tasks_table.up.sql  20260704151335_tasks_unique_title.down.sql  20260704151335_tasks_unique_title.up.sql  20260704153605_create_users_table.up.sql
src/: main.rs
