[package]
name = "axum_tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { "version" = "1.52.3", "features" = ["rt-multi-thread", "macros"] }
tower = "0.5.3"
